--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,8 @@ workflows:
     environment:
       java: 17
     scripts:
+      - name: Grant execute permission
+        script: chmod +x gradlew
       - name: Assemble Debug APK
         script: ./gradlew assembleDebug
     artifacts:
